<resources>
    <string name="app_name">Empresas</string>
    <string name="welcome_login">Bem-vindo ao empresas</string>
    <string name="login_text">Lorem ipsum dolor sit amet, contetur adipiscing elit. Nunc accumsan.</string>
    <string name="text_email">E-mail</string>
    <string name="text_password">Senha</string>
    <string name="button_entry">Entrar</string>
    <string name="required_field_error">Este campo é obrigatório</string>
    <string name="invalid_email_format_error">Formato de e-mail inválido</string>
    <string name="title_activity_home">Home</string>
    <string name="search_view_text">Pesquisar</string>
    <string name="logout_menu">Sair</string>
    <string name="ok">Ok</string>
    <string name="no_enterprise_found">Nenhuma empresa encontrada</string>
    <string name="server_error_message">Estamos com problemas em nosso servidor. Tente novamente mais tarde.</string>
    <string name="wrong_email_or_password">E-mail ou senha inválidos</string>
</resources>
